==> illuosion/AutoLock/User/usart/bsp_debug_usart.c <==
/**
 ******************************************************************************
 * @file    bsp_debug_usart.c
 * @author  fire
 * @version V1.0
 * @date    2015-xx-xx
 * @brief   重定向c库printf函数到usart端口，中断接收模式
 ******************************************************************************
 * @attention
 *
 * 实验平台:野火  STM32 F407 开发板
 * 论坛    :http://www.firebbs.cn
 * 淘宝    :https://fire-stm32.taobao.com
 *
 ******************************************************************************
 */

#include "./usart/bsp_debug_usart.h"
/* FreeRTOS头文件 */
#include "FreeRTOS.h"
#include "task.h"
#include "queue.h"
#include "semphr.h"

/**
 * @brief  配置嵌套向量中断控制器NVIC
 * @param  无
 * @retval 无
 */
static void NVIC_Configuration(void)
{
  NVIC_InitTypeDef NVIC_InitStructure;

  /*  */
  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_4);

  NVIC_InitStructure.NVIC_IRQChannel = DEBUG_USART_IRQ;

  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 7;

  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;

  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;

  NVIC_Init(&NVIC_InitStructure);
}

/**
 * @brief  DEBUG_USART GPIO 配置,工作模式配置。115200 8-N-1 ，中断接收模式
 * @param  无
 * @retval 无
 */
void Debug_USART_Config(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;
  USART_InitTypeDef USART_InitStructure;

  RCC_AHB1PeriphClockCmd(DEBUG_USART_RX_GPIO_CLK | DEBUG_USART_TX_GPIO_CLK, ENABLE);

  /* 使能 USART 时钟 */
  RCC_APB2PeriphClockCmd(DEBUG_USART_CLK, ENABLE);

  /* GPIO初始化 */
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

  /* 配置Tx引脚为复用功能  */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Pin = DEBUG_USART_TX_PIN;
  GPIO_Init(DEBUG_USART_TX_GPIO_PORT, &GPIO_InitStructure);

  /* 配置Rx引脚为复用功能 */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Pin = DEBUG_USART_RX_PIN;
  GPIO_Init(DEBUG_USART_RX_GPIO_PORT, &GPIO_InitStructure);

  /* 连接 PXx 到 USARTx_Tx*/
  GPIO_PinAFConfig(DEBUG_USART_RX_GPIO_PORT, DEBUG_USART_RX_SOURCE, DEBUG_USART_RX_AF);

  /*  连接 PXx 到 USARTx__Rx*/
  GPIO_PinAFConfig(DEBUG_USART_TX_GPIO_PORT, DEBUG_USART_TX_SOURCE, DEBUG_USART_TX_AF);

  /* 配置串DEBUG_USART 模式 */
  /* 波特率设置：DEBUG_USART_BAUDRATE */
  USART_InitStructure.USART_BaudRate = DEBUG_USART_BAUDRATE;
  /* 字长(数据位+校验位)：8 */
  USART_InitStructure.USART_WordLength = USART_WordLength_8b;
  /* 停止位：1个停止位 */
  USART_InitStructure.USART_StopBits = USART_StopBits_1;
  /* 校验位选择：不使用校验 */
  USART_InitStructure.USART_Parity = USART_Parity_No;
  /* 硬件流控制：不使用硬件流 */
  USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
  /* USART模式控制：同时使能接收和发送 */
  USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
  /* 完成USART初始化配置 */
  USART_Init(DEBUG_USART, &USART_InitStructure);

  /* 嵌套向量中断控制器NVIC配置 */
  NVIC_Configuration();

  /* 使能串口接收中断 */
  USART_ITConfig(DEBUG_USART, USART_IT_RXNE, ENABLE);

  // /* 开启 串口空闲 中断*/
  // USART_ITConfig(DEBUG_USART, USART_IT_IDLE, ENABLE);
  // // 开启串口DMA接收
  // USART_DMACmd(DEBUG_USART, USART_DMAReq_Rx, ENABLE);

  /* 使能串口 */
  USART_Cmd(DEBUG_USART, ENABLE);
}

/*****************  发送一个字符 **********************/
void Usart_SendByte(USART_TypeDef *pUSARTx, uint8_t ch)
{
  /* 发送一个字节数据到USART */
  USART_SendData(pUSARTx, ch);

  /* 等待发送数据寄存器为空 */
  while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TXE) == RESET)
    ;
}

char Usart_Rx_Buf[USART_RBUFF_SIZE];

void USARTx_DMA_Config(void)
{
  DMA_InitTypeDef DMA_InitStructure;

  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);
  // DMA复位
  DMA_DeInit(DEBUG_USART_DMA_STREAM);
  // 设置DMA通道
  DMA_InitStructure.DMA_Channel = USART_RX_DMA_CHANNEL;
  /*设置DMA源: 串口数据寄存器地址*/
  DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)USART_DR_ADDRESS;
  // 内存地址 要传输的变量的指针
  DMA_InitStructure.DMA_Memory0BaseAddr = (uint32_t)Usart_Rx_Buf;
  // 方向：从内存到外设
  DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralToMemory;
  // 传输大小
  DMA_InitStructure.DMA_BufferSize = USART_RBUFF_SIZE;
  // 外设地址不增
  DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
  // 内设地址自增
  DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
  // 外设数据单位
  DMA_InitStructure.DMA_PeripheralDataSize =
      DMA_PeripheralDataSize_Byte;
  // 内存数据单位
  DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
  // DMA模式  一次或者循环模式
  // DMA_InitStructure.DMA_Mode = DMA_Mode_Normal ;
  DMA_InitStructure.DMA_Mode = DMA_Mode_Circular;
  // 优先级 中
  DMA_InitStructure.DMA_Priority = DMA_Priority_VeryHigh;
  // 禁止内存到内存的传输
  /* 禁用FIFO*/
  DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;
  DMA_InitStructure.DMA_FIFOThreshold = DMA_FIFOThreshold_Full;
  /* 存储器突发传输1个节拍 */
  DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;
  /* 外设突发传输1个节拍 */
  DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;
  /* 配置DMA2 的数据流 7 */
  DMA_Init(DEBUG_USART_DMA_STREAM, &DMA_InitStructure);
  // 清除DMA所有标志
  DMA_ClearFlag(DEBUG_USART_DMA_STREAM, DMA_FLAG_TCIF2);
  DMA_ITConfig(DEBUG_USART_DMA_STREAM, DMA_IT_TE, ENABLE);
  // 使能DMA
  DMA_Cmd(DEBUG_USART_DMA_STREAM, ENABLE);
}

extern SemaphoreHandle_t BinarySem_Handle_W;

void Uart_DMA_Rx_Data(void)
{
  BaseType_t pxHigherPriorityTaskWoken;
  // 关闭DMA 防止干扰
  DMA_Cmd(DEBUG_USART_DMA_STREAM, DISABLE);
  // 清除DMA标志位
  DMA_ClearFlag(DEBUG_USART_DMA_STREAM, DMA_FLAG_TCIF2);
  //  重新赋值计数值， 必须大于等于最大可能接收到的数据帧数目
  DMA_SetCurrDataCounter(DEBUG_USART_DMA_STREAM, USART_RBUFF_SIZE);
  DMA_Cmd(DEBUG_USART_DMA_STREAM, ENABLE);

  /*
  xSemaphoreGiveFromISR(SemaphoreHandle_t xSemaphore,
                      BaseType_t *pxHigherPriorityTaskWoken);
  */

  // 给出二值信号量 发送接收到新数据标志 供前台程序查询
  xSemaphoreGiveFromISR(BinarySem_Handle_W, &pxHigherPriorityTaskWoken); // 释放二值信号量
  // 如果需要的话进行一次任务切换，系统会判断是否需要进行任务切换
  portYIELD_FROM_ISR(pxHigherPriorityTaskWoken);
}

/*****************  发送字符串 **********************/
void Usart_SendString(USART_TypeDef *pUSARTx, char *str)
{
  unsigned int k = 0;
  do
  {
    Usart_SendByte(pUSARTx, *(str + k));
    k++;
  } while (*(str + k) != '\0');

  /* 等待发送完成 */
  while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TC) == RESET)
  {
  }
}

/*****************  发送一个16位数 **********************/
void Usart_SendHalfWord(USART_TypeDef *pUSARTx, uint16_t ch)
{
  uint8_t temp_h, temp_l;

  /* 取出高八位 */
  temp_h = (ch & 0XFF00) >> 8;
  /* 取出低八位 */
  temp_l = ch & 0XFF;

  /* 发送高八位 */
  USART_SendData(pUSARTx, temp_h);
  while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TXE) == RESET)
    ;

  /* 发送低八位 */
  USART_SendData(pUSARTx, temp_l);
  while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TXE) == RESET)
    ;
}

/// 重定向c库函数printf到串口，重定向后可使用printf函数
int fputc(int ch, FILE *f)
{
  /* 发送一个字节数据到串口 */
  USART_SendData(DEBUG_USART, (uint8_t)ch);

  /* 等待发送完毕 */
  while (USART_GetFlagStatus(DEBUG_USART, USART_FLAG_TXE) == RESET)
    ;

  return (ch);
}

/// 重定向c库函数scanf到串口，重写向后可使用scanf、getchar等函数
int fgetc(FILE *f)
{
  /* 等待串口输入数据 */
  while (USART_GetFlagStatus(DEBUG_USART, USART_FLAG_RXNE) == RESET)
    ;

  return (int)USART_ReceiveData(DEBUG_USART);
}
/*********************************************END OF FILE**********************/
